--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
         navigator.serviceWorker
           .register('/sw.js')
           .then(function (registration) {
+            alert('here');
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
           })
           .catch(function (err) {
